--- a/WareHouseNTierProject/WareHouseNTierProject.DAL/WareHouseNTierProject.DAL.csproj
+++ b/WareHouseNTierProject/WareHouseNTierProject.DAL/WareHouseNTierProject.DAL.csproj
@@ -9,10 +9,9 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>WareHouseNTierProject.DAL</RootNamespace>
     <AssemblyName>WareHouseNTierProject.DAL</AssemblyName>
-    <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <Deterministic>true</Deterministic>
-    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -50,6 +49,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Context\ProjectContext.cs" />
+    <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
